<resources>
    <string name="app_name">Agenda</string>
    <string name="btn_login">Log In</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="txt_full_name">Full Name</string>
    <string name="txt_email">Email</string>
    <string name="txt_username">Username</string>
    <string name="txt_password">Password</string>
    <string name="btn_create_account">Create Account</string>
    <string name="btn_already_member">Already a member? Log in</string>
    <string name="txt_forgot_password">Forgor your password?</string>

    <string name="title_activity_splash_screnn">SplashScrenn</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
